<resources>
    <string name="app_name">Trip Management</string>
    <string name="lblAppDescription">This app is awesome and you can control yours expensives during you trip! Enjoy!!</string>
    <string name="lblStudentName">Student name</string>
    <string name="lblCourseName">Course name</string>
    <string name="lblStudentEmail">Student e-mail</string>
    <string name="lblRodrigoTrentinRossi" translatable="false">RODRIGO TRENTIN ROSSI</string>
    <string name="lblJavaTechnologySpecialization">Java Technology Specialization</string>
    <string name="lblRodrigorossiemail" translatable="false">rodrigo.rossi@fullcustom.com.br</string>
    <string name="lblAbout">About</string>
    <string name="lblNew">New Trip</string>
    <string name="lblEdit">Edit</string>
    <string name="lblDelete">Delete</string>
    <string name="lblAreYouSure">Are you sure?</string>
    <string name="lblConfirmation">Confirmation</string>
    <string name="lblYes">Yes</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblDestiny">Destiny</string>
    <string name="lblInitialMileage">Initial Mileage</string>
    <string name="lblFinalMileage">Final Mileage</string>
    <string name="lblTripType">Trip Type</string>
    <string name="lblWork">Work</string>
    <string name="lblPrivate">Private</string>
    <string name="lblLeisure">Leisure</string>
    <string name="lblVehicleType">Vehicle Type</string>
    <string name="lblRefound">Refound</string>
    <string name="lblSave">Save</string>
    <string name="lblNewTrip">New Trip</string>
    <string name="lblUpdateTrip">Update Trip</string>
    <string name="lblRental">Rental</string>
    <string name="lblBorrowed">Borrowed</string>
    <string name="lblUber" translatable="false">Uber</string>
    <string name="lblShowRefundIcon">Refund Icon</string>
    <string name="lblOrderAlphabetically">Order</string>
    <string name="lblDestinyMandatory">Destiny is mandatory</string>
</resources>