<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemNew"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/lblNew"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/lblAbout"
        app:showAsAction="ifRoom" />
    <group
        android:id="@+id/groupShowRefundIcon"
        android:checkableBehavior="all">
        <item
            android:id="@+id/menuItemRefundIcon"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/lblShowRefundIcon"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menuItemOrderAlphabetically"
            android:checkable="true"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="@string/lblOrderAlphabetically"
            app:showAsAction="ifRoom" />
    </group>
</menu>