<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityTrip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblDestiny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDestiny"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblInitialMileage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editDestiny"
        app:layout_constraintTop_toBottomOf="@+id/editDestiny" />

    <EditText
        android:id="@+id/editInitialMileage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/editFinalMileage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblFinalMileage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editDestiny" />

    <EditText
        android:id="@+id/editFinalMileage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editDestiny"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblTripType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editInitialMileage"
        app:layout_constraintTop_toBottomOf="@+id/editInitialMileage" />

    <RadioGroup
        android:id="@+id/radioGroupTripType"
        android:layout_width="157dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/editInitialMileage"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblWork" />

        <RadioButton
            android:id="@+id/radioPrivate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPrivate" />

        <RadioButton
            android:id="@+id/radioLeisure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLeisure" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblVehicleType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editFinalMileage"
        app:layout_constraintTop_toBottomOf="@+id/editFinalMileage" />

    <Spinner
        android:id="@+id/spinnerVehicleType"
        style="@style/Platform.Widget.AppCompat.Spinner"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:entries="@array/vehicles_type"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/editFinalMileage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Switch
        android:id="@+id/switchRefound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblRefound"
        app:layout_constraintEnd_toEndOf="@+id/spinnerVehicleType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerVehicleType"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVehicleType" />

</androidx.constraintlayout.widget.ConstraintLayout>